@@ -1,5 +1,11 @@
 2008-06-06  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-power-manager.[ch]: rename panel_get_power_manager() to
+	panel_power_manager_get()
+	* panel-logout.c: (panel_logout_init): updated for this change
+
+2008-06-06  Vincent Untz  <vuntz@gnome.org>
+
 	* libpanel-util/panel-cleanup.[ch]: add description
 	* libpanel-util/panel-keyfile.[ch]: ditto
 	* libpanel-util/Makefile.am: add new file
